ALF-455 Структура карточки - Общее описание интерфейса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1488 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -56,3 +56,7 @@
 .document-metadata-header h2 .view {
     background-image: url("/share/res/images/lecm-documents/view-discussion-16.png");
 }
+
+.alfresco-twister-closed .alfresco-twister-actions {
+    display: inline;
+}
