--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2070,3 +2070,8 @@ div[id$=date-cntrl] - селектор для всех div с id, заканчи
     border-bottom: none;
 }
 
+.dark a.title {
+    color: #333333;
+    text-decoration: underline;
+}
+
