ALF-455 Структура карточки - Общее описание интерфейса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1521 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -55,7 +55,7 @@
 }
 
 .dashlet .lecm-dashlet-actions .expand {
-    background-image: url("/share/res/images/lecm-documents/expand-16.png");
+    background-image: url("/share/res/images/lecm-documents/expand-10.png");
 }
 
 .document-metadata-header h2 .expand {
@@ -74,4 +74,13 @@
     background-repeat: no-repeat;
     padding: 1em;
     text-decoration: none;
+}
+
+.yui-gc .yui-u {
+    margin-left: 1.99%;
+    width: 20%;
+}
+
+.yui-gc div.first {
+    width: 78%;
 }
