ALF-470: тэги справа: view fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1524 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-tags.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-tags.css
@@ -1,7 +1,9 @@
 .panel-body {
-    clear: left;
-    line-height: 1.5em;
+    height: auto;
     min-height: 1.5em;
+    line-height: 1.5em;
+    clear: left;
+    overflow-y: hidden;
 }
 
 .yui-skin-lecmTheme .panel-body span.item {
