"Основной дашлет".  Добавлена кнопка редактирования в просмотре дашлета.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1540 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -26,6 +26,21 @@
     background-image: url("/share/res/images/lecm-documents/expand-10.png");
 }
 
+.dashlet-metadata .lecm-dashlet-actions .edit {
+    background-image: url("/share/res/components/profile/images/edit.png");
+    background-repeat: no-repeat;
+    padding-right: 13px;
+}
+
+.dashlet-metadata .lecm-dashlet-actions {
+    cursor: pointer;
+    float: right;
+    height: 16px;
+    margin: 3px;
+    width: 16px;
+    padding-right: 15px;
+}
+
 .dashlet .lecm-dashlet-actions a {
     background-position: 0 center;
     background-repeat: no-repeat;
