ALF-457: Вложения (дашлет)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1580 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -32,6 +32,15 @@
     padding-right: 13px;
 }
 
+.dashlet .lecm-dashlet-actions-right {
+	float: right;
+}
+
+.dashlet select.attachment-categories-select {
+	font-size: 13px;
+	padding: 0;
+}
+
 .dashlet-metadata .lecm-dashlet-actions {
     cursor: pointer;
     float: right;
