ALF-457: Вложения (дашлет) - просмотр в браузере
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1589 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -131,3 +131,7 @@
     font-weight: bold;
     text-decoration: underline;
 }
+
+.datagrid .action-set .onActionViewContent a {
+	background-image: url(/share/res/components/documentlibrary/actions/document-view-content-16.png);
+}
