ALF-457: Вложения (дашлет) - загрузка новой версии
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1590 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -135,3 +135,7 @@
 .datagrid .action-set .onActionViewContent a {
 	background-image: url(/share/res/components/documentlibrary/actions/document-view-content-16.png);
 }
+
+.datagrid .action-set .onActionUploadNewVersion a {
+	background-image: url(/share/res/components/documentlibrary/actions/document-upload-new-version-16.png);
+}
