ALF-488: Добавление новой версии контента через drag and drop
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1610 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -83,6 +83,12 @@
     cursor: pointer;
 }
 
+.dndDocListHighlight
+{
+	outline: 2px solid #4F94C9;
+	outline-offset: -2px;
+}
+
 .highlight_field {
     border: 1px red solid;
 }
