[fix] небольшие доработки по стилям блока Участники
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1621 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -7,7 +7,7 @@
 }
 
 .yui-gc .yui-u {
-    margin-left: 1.99%;
+    margin-left: 0%;
     width: 20%;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .yui-gc div.first {
-    width: 77%;
+    width: 79%;
 }
 
 .yui-gd .yui-u .column2 {
@@ -34,11 +34,13 @@
 }
 
 .first .yui-gd div.column1 {
-    width: 49%;
+    width: 47%;
+    margin-left: 2%;
 }
 
 .first .yui-gd div.column2 {
-    width: 49%;
+    width: 47%;
+    margin-right: 2%
 }
 
 .alfresco-twister-actions a {
