--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/lecm-association-search.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/lecm-association-search.css
@@ -1,11 +1,11 @@
 div.object-finder div.current-values {
 	margin-top: 10px;
+	width: 100%;
 }
 
 div.object-finder div.search-picker div.picker-items {
 	border: 1px solid #aaa;
 	height: 150px;
-	width: 28em;
 	overflow: auto;
 	position: relative;
 }
@@ -18,7 +18,11 @@ div.object-finder div.search-picker div.search {
 }
 
 div.object-finder div.search-picker input[type='text'].search-input {
-	width: 28em;
+	width: 420px;
 	padding: 0.3em 1em 0.4em 0.5em;
 	float: left;
+}
+
+.yui-skin-lecmTheme .yui-panel div.form-field div.object-finder div.search-picker {
+	white-space: normal;
 }
