ALF-440: Просмотр перечня связей - иконки для документов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1669 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-connections-list.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-connections-list.css
@@ -27,6 +27,10 @@
 	border-bottom: 1px solid #E4E4E4;
 }
 
+.connections-list .detail-list-item td.icon {
+	width: 70px;
+}
+
 .connections-list .detail-list-item .connection {
 	padding-left: 20px;
 
@@ -83,7 +87,8 @@ div.list-action-set a.list-action-link {
 	background-color: #F3F5FF;
 }
 
-div.list-action-set a.list-action-link:hover {
+div.list-action-set a.list-action-link:hover
+{
 	border: 1px solid #2b6eb5;
 	text-decoration: none;
 }
