При просмотре истории статусов scrollbar-a нет
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1689 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -69,7 +69,9 @@
     font-weight: bold;
     text-decoration: none;
 }
-
+.yui-skin-lecmTheme .datagrid .grid.yui-dt {
+    white-space: normal;
+}
 /***********Workflow tasks *************/
 
 .WORKFLOWTASKTYPE_NA {
