--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -95,7 +95,68 @@
     border: 1px red solid;
 }
 
-/**************** Workflow Task List *******************************/
+/**************** Workflow Tasks *******************************/
+
+.WORKFLOWTASKTYPE_NA {
+    display: none;
+}
+.WORKFLOWTASKTYPE_OVERDUE {
+    color: #FF0000;
+}
+.WORKFLOWTASKTYPE_SOON {
+    color: #CC6600;
+}
+.WORKFLOWTASKPRIORITY_LOW {
+    background-image: url("/share/res/components/images/priority-low-16.png");
+}
+.WORKFLOWTASKPRIORITY_MEDIUM {
+    background-image: url("/share/res/components/images/priority-medium-16.png");
+}
+.WORKFLOWTASKPRIORITY_HIGH {
+    background-image: url("/share/res/components/images/priority-high-16.png");
+}
+.total-tasks-count-right {
+    float: left;
+    background-image: url('/share/res/images/lecm-documents/active-tasks-background.png');
+    height: 26px;
+    width: 26px;
+    text-align: center;
+    padding-top: 3px;
+    color: #FFFFFF;
+    font-weight: bold;
+}
+
+.right-task {
+    margin-top: 12px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #CCCCCC;
+    padding-bottom: 5px;
+}
+
+.right-more-link {
+    text-decoration: underline;
+    font-size: 12px;
+    color: #999999;
+    float: left;
+    padding-left: 187px;
+    cursor: pointer;
+}
+
+.right-more-link-arrow {
+    background-image: url(/share/res/images/lecm-documents/gray_arrow.png);
+    float: right;
+    width: 12px;
+    height: 11px;
+    margin-right: 7px;
+    margin-top: 2px;
+    cursor: pointer;
+}
+
+.right-tasks-container {
+    margin-right: 25px;
+    margin-left: 15px;
+}
+
 .workflow-task {
     border-top: 1px solid #CCCCCC;
     padding-top: 5px;
@@ -121,15 +182,6 @@
     width: 16px;
     margin-right: 35px;
 }
-.WORKFLOWTASKPRIORITY_LOW {
-    background-image: url("/share/res/components/images/priority-low-16.png");
-}
-.WORKFLOWTASKPRIORITY_MEDIUM {
-    background-image: url("/share/res/components/images/priority-medium-16.png");
-}
-.WORKFLOWTASKPRIORITY_HIGH {
-    background-image: url("/share/res/components/images/priority-high-16.png");
-}
 .workflow-task-list-left-column {
     float:left;
     width: 200px;
@@ -141,3 +193,17 @@
     padding-top: 7px;
     padding-bottom: 3px;
 }
+
+/******************** Workflows ***************************/
+
+.right-workflow {
+    margin-top: 12px;
+}
+
+.right-workflows-container {
+    margin-right: 25px;
+    margin-left: 15px;
+    margin-bottom: 5px;
+}
+
+/***********************************************/
