--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -74,13 +74,6 @@
 }
 /***********Workflow tasks *************/
 
-.workflow-task-date {
-    font-size: 12px;
-    font-weight: bold;
-    color: #666666;
-    float: left;
-}
-
 .workflow-task-status {
     font-size: 9px;
     font-weight: bold;
@@ -100,6 +93,10 @@
     padding-bottom: 5px;
     padding-top: 6px;
     padding-left: 15px;
+}
+
+.dashlet .workflow-date {
+    float: left;
 }
 
 .dashlet .workflow-task-main-text {
