--- a/lecm-documents/share/src/main/webapp/css/components/document-header.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-header.css
@@ -1,5 +1,6 @@
 .document-header {
     background: #c5c5c5;
+    border-radius: 3px 3px 0px 0px;
 }
 
 .document-header h1 {
@@ -59,17 +60,19 @@
     float: right;
     width: 20%;
     text-align: right;
-    padding-top: 0.5em;
+    padding: 0.5em;
 }
 
 .document-header .document-action .subscribe span.first-child {
     background: url('../../images/lecm-subscriptions/alf_subscribe_16.png') no-repeat 5px 5px;
     padding-left: 7px;
+    border: 1px solid;
 }
 
 .document-header .document-action .unsubscribe span.first-child {
     background: url('../../images/lecm-subscriptions/alf_unsubscribe_16.png') no-repeat 5px 5px;
     padding-left: 7px;
+    border: 1px solid;
 }
 
 .document-header .attachment-thumbnail
