--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -1,6 +1,6 @@
 #doc-bd {
     background: none repeat scroll 0 0 #FAFAFA;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #000000;
     border-radius: 3px 3px 3px 3px;
     margin-bottom: 10px;
     padding-bottom: 0;
@@ -17,12 +17,12 @@
 
 .bordered {
     border: 1px solid #6C6C6C;
+    border-radius: 5px 5px 0px 0px;
 }
 
-.yui-u .document-details-panel {
-    background-color: #F2F2F2;
-    border-top: 1px solid #CCCCCC;
-    padding: 1em 0 1em 1em;
+.bordered-panel {
+    border: 1px solid #6C6C6C;
+    border-right: 0;
 }
 
 .yui-gc div.first {
@@ -65,13 +65,23 @@
 
 .widget-panel-grey {
     background-color: #ccc;
-    padding: 1em 0 1em 1em;
+    padding: 0.8em;
+}
+
+.widget-panel-white {
+    background-color: #F2F2F2;
+    padding: 0.8em 0.8em 0 0.8em;
 }
 
 .widget-button-grey {
     margin: 5px 10px 5px 15px;
     padding: 4px 4px 4px 11px;
     cursor: pointer;
+
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    text-decoration: none;
 }
 
 .widget-button-grey:hover {
