[~] изменения в стилях страницы "Документы"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1728 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-rating.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-rating.css
@@ -2,7 +2,7 @@
     width: 150px;
     height: 95px;
     float: right;
-    margin: 0 10px;
+    margin-right:2.99%;
     text-align: right;
 }
 .document-rating h2 {
