[~] изменения в стилях страницы "Документы"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1730 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-header.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-header.css
@@ -4,7 +4,7 @@
 }
 
 .document-header h1 {
-    padding: 0.5em 1em 0.2em;
+    padding: 0.5em 1em 0.5em;
 
 	font-family: Arial;
 	font-size: 16px;
@@ -44,6 +44,7 @@
 .document-header .document-info {
     float: left;
     width: 78%;
+    padding: 0.2em;
 }
 
 .document-header .document-attachment-info {
