--- a/lecm-documents/share/src/main/webapp/css/document-components-panel.css
+++ b/lecm-documents/share/src/main/webapp/css/document-components-panel.css
@@ -1,7 +1,7 @@
 .document-components-panel
 {
     background-color: #F2F2F2;
-    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
     padding: 0.8em 0.8em 0.8em 0.8em;
 }
 
@@ -19,4 +19,9 @@
 .widget-bordered-panel {
     background-color: #F2F2F2;
     padding: 0 0.8em 0 0.8em;
+}
+
+.document-history-panel {
+    background-color: #F2F2F2;
+    padding: 0.8em 0.8em 0.8em 0.8em;
 }
