ALF-469 4.6 Задачи (правая область)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1733 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -59,7 +59,7 @@
     right: 1em;
 }
 
-.alfresco-twister-actions .expand {
+.alfresco-twister-actions .expand:hover {
     background-image: url("/share/res/images/lecm-documents/expand-10.png");
 }
 
@@ -142,7 +142,7 @@
 }
 .total-tasks-count-right {
     float: right;
-    margin-right: 30px;
+    margin-right: 20px;
     margin-top: 1px;
     background-image: url('/share/res/images/lecm-documents/active-tasks-background.png');
     height: 24px;
@@ -185,8 +185,7 @@
 }
 
 .right-tasks-container {
-    margin-right: 25px;
-    margin-left: 15px;
+    padding-left: 15px;
 }
 
 .workflow-task-item {
