--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -169,8 +169,7 @@
     text-decoration: underline;
     font-size: 12px;
     color: #999999;
-    float: left;
-    padding-left: 187px;
+    float: right;
     cursor: pointer;
 }
 
@@ -179,8 +178,6 @@
     float: right;
     width: 12px;
     height: 11px;
-    margin-right: 7px;
-    margin-top: 2px;
     cursor: pointer;
 }
 
