[+]добавлена заглушка для секции "Печатные формы"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1776 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/document-components-panel.css
+++ b/lecm-documents/share/src/main/webapp/css/document-components-panel.css
@@ -21,7 +21,7 @@
     padding: 0 0.8em 0 0.8em;
 }
 
-.document-history-panel {
+.document-forms-panel {
     background-color: #F2F2F2;
     padding: 0.8em 0.8em 0.8em 0.8em;
 }
