Подсвечиваем активного собеседника в контакт листе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1790 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -91,6 +91,10 @@ ul, li {
     border: 1px solid #999999 !important;
 }
 
+.active-contact-view-item{
+    background-color: #00B0EB !important;
+}
+
 /*!* ijab UI v2.0.0pre * http://www.ijab.im/ * * Copyright(c) 2009 Hidden * * Date:* Revision:*/
 .ijab-Reference-standard {
     height: 5px;
@@ -1109,7 +1113,7 @@ margin: .3em .5em .3em;
 }
 
 .ijab-contactview-item-odd {
-    background: #ccc;
+    background: #eee;
 }
 
 .ijab-contactview-item-hover,
