[~] минорные изменения в стилях страницы "Документы"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1814 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/page-document.css
+++ b/lecm-documents/share/src/main/webapp/css/page-document.css
@@ -59,7 +59,7 @@
     right: 1em;
 }
 
-.alfresco-twister-actions .expand:hover {
+.document-components-panel:hover .alfresco-twister-actions .expand {
     background-image: url("/share/res/images/lecm-documents/expand-10.png");
 }
 
