--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -313,8 +313,9 @@ a .ijab-icon,a .ui-icon {
     width: 100%;
     position: absolute;
     bottom: 0;
-    border: none;
-    background: transparent;
+    background: white;
+    border: 1px solid black;
+
 }
 
 .ijab-chatlink span {
