ALF-655: Права. Присвоение рейтинга
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1862 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-rating.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-rating.css
@@ -9,28 +9,29 @@
     margin-bottom: 1em;
     margin-top: 1em;
 }
-#raiting {
-    position:relative;
+#rating {
     width: 105px;
     height: 21px;
     float: right;
     cursor: pointer;
     margin-bottom: 5px;
+    position: relative;
+    overflow: hidden;
 }
-#raiting_blank,
-#raiting_votes,
-#raiting_hover {
+#rating_blank,
+#rating_votes,
+#rating_hover {
     height: 21px;
     position: absolute;
 }
-#raiting_blank {
+#rating_blank {
     background: url('../../images/rating.png') repeat-x;
     width: 105px;
 }
-#raiting_votes {
+#rating_votes {
     background: url('../../images/rating.png') repeat-x 0 -21px;
 }
-#raiting_hover {
+#rating_hover {
     background: url('../../images/rating.png') repeat-x 0 -42px;
     display: none;
 }
