--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1868,6 +1868,13 @@ div.association-auto-complete-selected-item-even {
     border-bottom: 1px solid #ccc;
     padding: 3px 5px;
 }
+div.association-auto-complete-selected-item > span > a,
+div.association-auto-complete-selected-item-even > span > a {
+    max-width: 400px;
+    display: inline-block;
+    white-space: nowrap;
+    overflow-x: hidden;
+}
 div.association-auto-complete-selected-item:last-child,
 div.association-auto-complete-selected-item-even:last-child {
     border-bottom: none;
@@ -1941,13 +1948,10 @@ div.orgchart-picker-menu .search-input {
     padding: 0;
 }
 
-span.person {
-	background: url(../../components/images/filetypes/generic-user-16.png) no-repeat;
-}
-
 span.person a {
-	display: inline-block;
-	margin-left: 20px;
+    margin-left: 0;
+	padding-left: 20px;
+    background: url(../../components/images/filetypes/generic-user-16.png) no-repeat 0 2px;
 }
 
 .yui-skin-lecmTheme .datagrid span.person,
