ALF-660: контрол выбора : fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1887 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1959,10 +1959,14 @@ span.person a {
 .yui-skin-lecmTheme .datagrid span.document {
     padding-left: 0;
 }
-.yui-skin-lecmTheme .datagrid span.person a,
 .yui-skin-lecmTheme .datagrid span.container a,
 .yui-skin-lecmTheme .datagrid span.document a {
 	margin-left: 20px;
+}
+
+.yui-skin-lecmTheme  span.person,
+.yui-skin-lecmTheme .datagrid span.person {
+    background: none;
 }
 
 #searchBlock .right {
